Hand 173 calibration file correction.
Removed remaining extra brackets from the calibration.yaml file.

--- a/sr_hand_config/5946/calibrations/calibration.yaml
+++ b/sr_hand_config/5946/calibrations/calibration.yaml
@@ -23,15 +23,15 @@ sr_calibrations: [
 ["MFJ4", [[2810.0, -20.0], [2514.0, -10.0], [2188.0, 0.0], [1852.0, 10.0], [1516.0, 20.0]]], 
 ["RFJ1", [[3011.0, 0.0], [2478.0, 22.5], [1960.0, 45.0], [1478.0, 67.5], [1078.0, 90.0]]], 
 ["RFJ2", [[2827.0, 0.0], [2563.0, 22.5], [2207.0, 45.0], [1810.0, 67.5], [1449.0, 90.0]]], 
-["RFJ3", [[2802.0, -15.0], [[2510.0, 0.0], [2045.0, 22.5], [1583.0, 45.0], [1161.0, 67.5], [872.0, 90.0]]], 
+["RFJ3", [[2802.0, -15.0], [2510.0, 0.0], [2045.0, 22.5], [1583.0, 45.0], [1161.0, 67.5], [872.0, 90.0]]], 
 ["RFJ4", [[914.0, -20.0], [1203.0, -10.0], [1549.0, 0.0], [1884.0, 10.0], [2224.0, 20.0]]], 
-["LFJ1", [[2479.0, 0.0], [1940.0, 22.5], [1474.0, 45.0], [1060.0, 67.5], [822.0, 90.0]]], 
-["LFJ2", [[2785.0, 0.0], [2547.0, 22.5], [2233.0, 45.0], [1899.0, 67.5], [1587.0, 90.0]]], 
+["LFJ1", [[2479.0, 0.0],  [1940.0, 22.5], [1474.0, 45.0], [1060.0, 67.5], [822.0, 90.0]]], 
+["LFJ2", [[2785.0, 0.0],  [2547.0, 22.5], [2233.0, 45.0], [1899.0, 67.5], [1587.0, 90.0]]], 
 ["LFJ3", [[2909.0, -15.0], [2707.0, 0.0], [2269.0, 22.5], [1848.0, 45.0], [1410.0, 67.5], [1108.0, 90.0]]], 
 ["LFJ4", [[1272.0, -20.0], [1488.0, -10.0], [1742.0, 0.0], [1983.0, 10.0], [2199.0, 20.0]]], 
-["LFJ5", [[1594.0, 0.0], [2094.0, 22.5], [2647.0, 45.0], [3422.0, 67.5]]], 
+["LFJ5", [[1594.0, 0.0],  [2094.0, 22.5], [2647.0, 45.0], [3422.0, 67.5]]], 
 ["THJ3", [[2483.0, -15.0], [1658.0, 0.0], [1105.0, 15.0]]], 
-["THJ4", [[1361.0, 0.0], [1585.58, 22.5], [1819.42, 45.0], [2083.51, 67.5]]], 
+["THJ4", [[1361.0, 0.0],  [1585.58, 22.5], [1819.42, 45.0], [2083.51, 67.5]]], 
 ["THJ5", [[626.0, -60.0], [915.0, -45.0], [1132.0, -30.0], [1395.0, -15.0], [1706.0, 0.0], [2169.0, 15.0], [2609.0, 30.0], [2950.0, 45.0], [3277.0, 60.0]]], 
 ["WRJ1", [[2381.0, -45.0], [2304.0, -22.5], [2175.0, 0.0], [2048.0, 15.0], [1936.0, 30.0]]], 
 ["WRJ2", [[2526.0, -30.0], [957.0, 0.0], [164.0, 10.0]]], 
