--- a/sr_hand_config/5386/calibrations/calibration.yaml
+++ b/sr_hand_config/5386/calibrations/calibration.yaml
@@ -15,24 +15,24 @@
 sr_calibrations: [
 ["FFJ1", [[2955.0, 0.0], [2266.0, 22.5], [1571.0, 45.0], [876.0, 67.5], [354.0, 90.0]]], 
 ["FFJ2", [[2850.0, 0.0], [2580.0, 22.5], [2181.0, 45.0], [1807.0, 67.5], [1433.0, 90.0]]], 
-["FFJ3", [[2420.0, 0.0], [1930.0, 22.5], [1436.0, 45.0], [1029.0, 67.5], [758.0, 90.0]]], 
-["FFJ4", [[1573.0, -20.0], [1846.0, -10.0], [2117.0, 0.0], [2416.0, 10.0], [2643.0, 20.0]]], 
+["FFJ3", [[2745.0, -15.0], [2405.0, 0.0], [1949.0, 22.5], [1439.0, 45.0], [1012.0, 67.5], [800.0, 90.0]]],
+["FFJ4", [[1573.0, -20.0], [1846.0, -10.0], [2135.0, 0.0], [2416.0, 10.0], [2643.0, 20.0]]], 
 ["MFJ1", [[3179.0, 0.0], [2503.0, 22.5], [1790.0, 45.0], [1151.0, 67.5], [548.0, 90.0]]], 
 ["MFJ2", [[2709.0, 0.0], [2375.0, 22.5], [1965.0, 45.0], [1622.0, 67.5], [1312.0, 90.0]]], 
-["MFJ3", [[2733.0, 0.0], [2268.0, 22.5], [1772.0, 45.0], [1320.0, 67.5], [947.0, 90.0]]], 
-["MFJ4", [[1081.0, -20.0], [1361.0, -10.0], [1651.0, 0.0], [1958.0, 10.0], [2255.0, 20.0]]], 
+["MFJ3", [[3000.0, -15.0], [2726.0, 0.0], [2291.0, 22.5], [1778.0, 45.0], [1324.0, 67.5], [970.0, 90.0]]],
+["MFJ4", [[1081.0, -20.0], [1361.0, -10.0], [1635.0, 0.0], [1958.0, 10.0], [2255.0, 20.0]]], 
 ["RFJ1", [[3064.0, 0.0], [2370.0, 22.5], [1707.0, 45.0], [1041.0, 67.5], [577.0, 90.0]]], 
 ["RFJ2", [[2946.0, 0.0], [2627.0, 22.5], [2194.0, 45.0], [1831.0, 67.5], [1439.0, 90.0]]], 
-["RFJ3", [[2554.0, 0.0], [2002.0, 22.5], [1446.0, 45.0], [1010.0, 67.5], [757.0, 90.0]]], 
-["RFJ4", [[1749.0, -20.0], [1452.0, -10.0], [1102.27, 0.0], [857.0, 10.0], [661.0, 20.0]]], 
+["RFJ3", [[2968.0, -15.0], [2535.0, 0.0], [2022.0, 22.5], [1475.0, 45.0], [1024.0, 67.5], [775.0, 90.0]]], 
+["RFJ4", [[1749.0, -20.0], [1452.0, -10.0], [1102.0, 0.0], [857.0, 10.0], [661.0, 20.0]]], 
 ["LFJ1", [[3012.0, 0.0], [2371.0, 22.5], [1702.0, 45.0], [982.0, 67.5], [538.0, 90.0]]], 
 ["LFJ2", [[2841.0, 0.0], [2532.0, 22.5], [2132.0, 45.0], [1754.0, 67.5], [1404.0, 90.0]]], 
-["LFJ3", [[2437.0, 0.0], [1994.0, 22.5], [1511.0, 45.0], [1133.0, 67.5], [855.0, 90.0]]], 
+["LFJ3", [[2772.0, -15.0], [2456.0, 0.0], [2012.0, 22.5], [1532.0, 45.0], [1143.0, 67.5], [871.0, 90.0]]], 
 ["LFJ4", [[2394.0, -20.0], [2088.0, -10.0], [1771.0, 0.0], [1490.0, 10.0], [1271.0, 20.0]]], 
-["LFJ5", [[1810.87, 0.0], [2279.0, 22.5], [2689.0, 45.0], [3334.0, 67.5]]], 
-["THJ3", [[2839.0, -15.0], [1894.0, 0.0], [767.0, 15.0]]], 
-["THJ4", [[1556.0, 0.0], [1863.0, 22.5], [2162.0, 45.0], [2420.0, 67.5]]], 
-["THJ5", [[646.0, -60.0], [904.0, -45.0], [1139.0, -30.0], [1335.0, -15.0], [1620.0, 0.0], [2002.0, 15.0], [2386.0, 30.0], [2698.0, 45.0], [2970.0, 60.0]]], 
+["LFJ5", [[1790.0, 0.0], [2279.0, 22.5], [2689.0, 45.0], [3334.0, 67.5]]], 
+["THJ3", [[2839.0, -12.0], [1894.0, 0.0], [767.0, 12.0]]], 
+["THJ4", [[1628.0, 0.0], [1932.0, 22.5], [2225.0, 45.0], [2465.0, 67.5]]],
+["THJ5", [[600.0, -60.0], [879.0, -45.0], [1106.0, -30.0], [1290.0, -15.0], [1530.0, 0.0], [1913.0, 15.0], [2315.0, 30.0], [2649.0, 45.0], [2940.0, 60.0]]],
 ["WRJ1", [[1548.0, -45.0], [1736.0, -22.5], [1967.0, 0.0], [2119.0, 15.0], [2279.0, 30.0]]], 
 ["WRJ2", [[2647.0, -30.0], [1189.0, 0.0], [489.0, 10.0]]], 
 ]
