--- a/sr_hand_config/5514/calibrations/calibration.yaml
+++ b/sr_hand_config/5514/calibrations/calibration.yaml
@@ -17,26 +17,26 @@
 sr_calibrations: [
 ["FFJ1", [[3514.49, 0.0], [2891.0, 22.5], [2167.0, 45.0], [1375.0, 67.5], [650.0, 90.0]]], 
 ["FFJ2", [[3012.97, 0.0], [2737.0, 22.5], [2319.0, 45.0], [1841.0, 67.5], [1430.0, 90.0]]], 
-["FFJ3", [[2426.0, 0.0], [1943.0, 22.5], [1451.0, 45.0], [1092.0, 67.5], [812.0, 90.0]]], 
+["FFJ3", [[2825.0, -15.0],[2426.0, 0.0], [1943.0, 22.5], [1451.0, 45.0], [1092.0, 67.5], [812.0, 90.0]]], 
 ["FFJ4", [[2024.0, -20.0], [1709.0, -10.0], [1402.0, 0.0], [1121.0, 10.0], [909.0, 20.0]]], 
 ["MFJ1", [[3404.0, 0.0], [2736.0, 22.5], [2033.0, 45.0], [1312.0, 67.5], [704.0, 90.0]]], 
 ["MFJ2", [[2936.0, 0.0], [2634.0, 22.5], [2210.0, 45.0], [1782.0, 67.5], [1387.0, 90.0]]], 
-["MFJ3", [[2570.91, 0.0], [2078.0, 22.5], [1561.0, 45.0], [1158.0, 67.5], [833.0, 90.0]]], 
+["MFJ3", [[2904.0, -15.0],[2570.91, 0.0], [2078.0, 22.5], [1561.0, 45.0], [1158.0, 67.5], [833.0, 90.0]]], 
 ["MFJ4", [[2112.0, -20.0], [1798.0, -10.0], [1464.0, 0.0], [1168.0, 10.0], [892.0, 20.0]]], 
 ["RFJ1", [[2978.23, 0.0], [2318.0, 22.5], [1598.0, 45.0], [973.0, 67.5], [475.0, 90.0]]], 
 ["RFJ2", [[2855.32, 0.0], [2545.0, 22.5], [2163.0, 45.0], [1752.0, 67.5], [1386.0, 90.0]]], 
-["RFJ3", [[2543.0, 0.0], [2080.0, 22.5], [1602.0, 45.0], [1154.0, 67.5], [829.0, 90.0]]], 
-["RFJ4", [[1338.0, -20.0], [1611.0, -10.0], [1927.0, 0.0], [2234.0, 10.0], [2529.0, 20.0]]], 
+["RFJ3", [[2875.0, -15.0],[2543.0, 0.0], [2080.0, 22.5], [1602.0, 45.0], [1154.0, 67.5], [829.0, 90.0]]], 
+["RFJ4", [[1338.0, -20.0], [1611.0, -10.0], [1935.0, 0.0], [2234.0, 10.0], [2529.0, 20.0]]], 
 ["LFJ1", [[3473.65, 0.0], [2829.0, 22.5], [2152.0, 45.0], [1381.0, 67.5], [732.0, 90.0]]], 
 ["LFJ2", [[2846.47, 0.0], [2554.0, 22.5], [2184.0, 45.0], [1822.0, 67.5], [1493.0, 90.0]]], 
-["LFJ3", [[2383.0, 0.0], [1934.0, 22.5], [1515.0, 45.0], [1157.0, 67.5], [889.0, 90.0]]], 
-["LFJ4", [[1255.0, -20.0], [1605.0, -10.0], [1968.0, 0.0], [2307.0, 10.0], [2625.0, 20.0]]], 
+["LFJ3", [[2751.0, -15.0],[2383.0, 0.0], [1934.0, 22.5], [1515.0, 45.0], [1157.0, 67.5], [889.0, 90.0]]], 
+["LFJ4", [[1255.0, -20.0], [1605.0, -10.0], [1908.0, 0.0], [2307.0, 10.0], [2625.0, 20.0]]], 
 ["LFJ5", [[1270.0, 0.0], [1799.0, 22.5], [2285.0, 45.0], [2959.0, 67.5]]], 
 ["THJ3", [[2682.0, -15.0], [1892.0, 0.0], [737.0, 15.0]]], 
 ["THJ4", [[1400.0, 0.0], [1738.0, 22.5], [2037.0, 45.0], [2330.0, 67.5]]], 
 ["THJ5", [[544.0, -60.0], [832.0, -45.0], [1036.0, -30.0], [1310.0, -15.0], [1639.0, 0.0], [2155.0, 15.0], [2614.0, 30.0], [2885.0, 45.0], [3088.0, 60.0]]], 
 ["WRJ1", [[2444.0, -45.0], [2328.0, -22.5], [2159.0, 0.0], [2044.0, 15.0], [1950.0, 30.0]]], 
-["WRJ2", [[2816.0, -30.0], [1295.0, 0.0], [707.0, 10.0]]], 
+["WRJ2", [[2816.0, -30.0], [1335.0, 0.0], [707.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
