--- a/sr_hand_config/6026/calibrations/calibration.yaml
+++ b/sr_hand_config/6026/calibrations/calibration.yaml
@@ -16,19 +16,19 @@
 sr_calibrations: [
 ["FFJ1", [[2995.0, 0.0], [2360.0, 22.5], [1731.0, 45.0], [1170.0, 67.5], [640.0, 90.0]]], 
 ["FFJ2", [[2689.0, 0.0], [2384.0, 22.5], [2055.0, 45.0], [1728.0, 67.5], [1449.0, 90.0]]], 
-["FFJ3", [[3146.0, 0.0], [2740.0, 22.5], [2243.0, 45.0], [1738.0, 67.5], [1284.0, 90.0]]], 
+["FFJ3", [[3362.0, -15.0], [3146.0, 0.0], [2740.0, 22.5], [2243.0, 45.0], [1738.0, 67.5], [1226.0, 90.0]]], 
 ["FFJ4", [[1888.0, -20.0], [1564.0, -10.0], [1217.0, 0.0], [933.0, 10.0], [687.0, 20.0]]], 
 ["MFJ1", [[2667.0, 0.0], [1986.0, 22.5], [1314.0, 45.0], [753.0, 67.5], [420.0, 90.0]]], 
 ["MFJ2", [[2893.0, 0.0], [2659.0, 22.5], [2356.0, 45.0], [2061.0, 67.5], [1813.0, 90.0]]], 
-["MFJ3", [[2365.0, 0.0], [1776.0, 22.5], [1211.0, 45.0], [802.0, 67.5], [610.0, 90.0]]], 
+["MFJ3", [[2845.0, -15.0], [2365.0, 0.0], [1776.0, 22.5], [1211.0, 45.0], [802.0, 67.5], [596.0, 90.0]]], 
 ["MFJ4", [[2307.0, -20.0], [2145.0, -10.0], [1952.0, 0.0], [1785.0, 10.0], [1632.0, 20.0]]], 
 ["RFJ1", [[3422.0, 0.0], [2835.0, 22.5], [2190.0, 45.0], [1468.0, 67.5], [781.0, 90.0]]], 
 ["RFJ2", [[2838.0, 0.0], [2573.0, 22.5], [2184.0, 45.0], [1807.0, 67.5], [1440.0, 90.0]]], 
-["RFJ3", [[2390.0, 0.0], [1923.0, 22.5], [1417.0, 45.0], [1053.0, 67.5], [861.0, 90.0]]], 
+["RFJ3", [[2770.0, -15.0], [2390.0, 0.0], [1923.0, 22.5], [1417.0, 45.0], [1053.0, 67.5], [863.0, 90.0]]], 
 ["RFJ4", [[1742.62, -20.0], [1991.7, -10.0], [2233.62, 0.0], [2495.45, 10.0], [2730.93, 20.0]]], 
 ["LFJ1", [[3262.0, 0.0], [2680.0, 22.5], [1980.0, 45.0], [1283.0, 67.5], [684.0, 90.0]]], 
 ["LFJ2", [[2976.0, 0.0], [2680.0, 22.5], [2287.0, 45.0], [1929.0, 67.5], [1558.0, 90.0]]], 
-["LFJ3", [[3307.0, 0.0], [2845.0, 22.5], [2288.0, 45.0], [1737.0, 67.5], [1258.0, 90.0]]], 
+["LFJ3", [[3560.0, -15.0], [3307.0, 0.0], [2845.0, 22.5], [2288.0, 45.0], [1737.0, 67.5], [1230.0, 90.0]]], 
 ["LFJ4", [[931.0, -20.0], [1193.0, -10.0], [1488.0, 0.0], [1776.0, 10.0], [2045.0, 20.0]]], 
 ["LFJ5", [[604.0, 0.0], [1423.0, 22.5], [1954.0, 45.0], [2569.0, 67.5]]], 
 ["THJ3", [[2505.0, -15.0], [1666.0, 0.0], [1114.0, 15.0]]], 
