--- a/sr_hand_config/Template_EL/calibrations/calibration.yaml
+++ b/sr_hand_config/Template_EL/calibrations/calibration.yaml
@@ -13,54 +13,59 @@
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
 sr_calibrations: [
-["FFJ1", [[2937.97, 0.0], [2306.83, 22.5], [1534.5, 45.0], [932.04, 67.5], [385.07, 90.0]]], 
-["FFJ2", [[2838.11, 0.0], [2557.05, 22.5], [2195.89, 45.0], [1785.79, 67.5], [1426.9, 90.0]]], 
-["FFJ3", [[2448.76, 0.0], [1908.62, 22.5], [1385.97, 45.0], [962.58, 67.5], [694.59, 90.0]]], 
-["FFJ4", [[1569.74, -20.0], [1834.69, -10.0], [2127.14, 0.0], [2424.96, 10.0], [2681.91, 20.0]]], 
-["MFJ1", [[3159.97, 0.0], [2474.21, 22.5], [1745.03, 45.0], [1095.13, 67.5], [526.27, 90.0]]], 
-["MFJ2", [[2700.62, 0.0], [2365.12, 22.5], [1990.25, 45.0], [1625.34, 67.5], [1313.51, 90.0]]], 
-["MFJ3", [[2747.48, 0.0], [2274.25, 22.5], [1752.13, 45.0], [1293.28, 67.5], [944.79, 90.0]]], 
-["MFJ4", [[1094.65, -20.0], [1378.71, -10.0], [1678.17, 0.0], [1975.9, 10.0], [2279.19, 20.0]]], 
-["RFJ1", [[3062.65, 0.0], [2411.91, 22.5], [1714.65, 45.0], [1069.96, 67.5], [563.09, 90.0]]], 
-["RFJ2", [[2919.44, 0.0], [2598.89, 22.5], [2185.01, 45.0], [1800.35, 67.5], [1439.95, 90.0]]], 
-["RFJ3", [[2575.05, 0.0], [2016.09, 22.5], [1465.36, 45.0], [978.39, 67.5], [728.07, 90.0]]], 
-["RFJ4", [[1793.16, -20.0], [1467.64, -10.0], [1163.95, 0.0], [843.94, 10.0], [634.71, 20.0]]], 
-["LFJ1", [[2989.41, 0.0], [2344.14, 22.5], [1631.66, 45.0], [1000.08, 67.5], [538.64, 90.0]]], 
-["LFJ2", [[2821.29, 0.0], [2512.52, 22.5], [2117.07, 45.0], [1742.49, 67.5], [1421.01, 90.0]]], 
-["LFJ3", [[2449.94, 0.0], [1997.61, 22.5], [1501.91, 45.0], [1107.02, 67.5], [861.12, 90.0]]], 
-["LFJ4", [[2427.77, -20.0], [2118.78, -10.0], [1793.06, 0.0], [1469.36, 10.0], [1255.04, 20.0]]], 
-["LFJ5", [[1819.94, 0.0], [2247.58, 22.5], [2684.0, 45.0], [3285.93, 67.5]]], 
-["THJ3", [[2806.0, -15.0], [1662.0, 0.0], [732.0, 15.0]]], 
-["THJ4", [[1583.0, 0.0], [1853.0, 22.5], [2170.0, 45.0], [2427.0, 67.5]]], 
-["THJ5", [[657.0, -60.0], [907.0, -45.0], [1143.0, -30.0], [1331.0, -15.0], [1610.0, 0.0], [1986.0, 15.0], [2390.0, 30.0], [2709.0, 45.0], [2948.0, 60.0]]], 
-["WRJ1", [[1552.0, -45.0], [1742.0, -22.5], [1978.0, 0.0], [2128.0, 15.0], [2283.0, 30.0]]], 
-["WRJ2", [[2663.0, -30.0], [1188.0, 0.0], [467.0, 10.0]]], 
+["FFJ1", [[3267.0, 0.0], [2483.0, 22.5], [1698.0, 45.0], [1005.0, 67.5], [409.0, 90.0]]], 
+["FFJ2", [[2893.0, 0.0], [2678.0, 22.5], [2322.0, 45.0], [1973.0, 67.5], [1608.0, 90.0]]], 
+["FFJ3", [[3084.0, -15.0], [2484.0, 0.0], [1961.0, 22.5], [1398.0, 45.0], [978.0, 67.5], [769.0, 90.0]]], 
+["FFJ4", [[2587.0, -20.0], [2260.0, -10.0], [1908.0, 0.0], [1590.0, 10.0], [1314.0, 20.0]]], 
+["MFJ1", [[3259.41, 0.0], [2652.0, 22.5], [1976.0, 45.0], [1328.0, 67.5], [698.0, 90.0]]], 
+["MFJ2", [[2927.78, 0.0], [2699.0, 22.5], [2346.0, 45.0], [1956.0, 67.5], [1575.0, 90.0]]], 
+["MFJ3", [[3174.0, -15.0], [2574.0, 0.0], [2026.0, 22.5], [1461.0, 45.0], [960.0, 67.5], [625.0, 90.0]]], 
+["MFJ4", [[2127.0, -20.0], [1819.0, -10.0], [1539.7, 0.0], [1222.0, 10.0], [971.0, 20.0]]], 
+["RFJ1", [[3309.0, 0.0], [2722.0, 22.5], [2069.0, 45.0], [1439.0, 67.5], [843.0, 90.0]]], 
+["RFJ2", [[3014.0, 0.0], [2787.0, 22.5], [2405.0, 45.0], [2002.0, 67.5], [1577.0, 90.0]]], 
+["RFJ3", [[3058.0, -15.0], [2458.0, 0.0], [2009.0, 22.5], [1533.0, 45.0], [1106.0, 67.5], [905.0, 90.0]]], 
+["RFJ4", [[956.0, -20.0], [1236.0, -10.0], [1531.0, 0.0], [1812.0, 10.0], [2099.0, 20.0]]], 
+["LFJ1", [[2968.0, 0.0], [2282.0, 22.5], [1509.0, 45.0], [838.0, 67.5], [367.0, 90.0]]], 
+["LFJ2", [[2972.0, 0.0], [2605.0, 22.5], [2200.0, 45.0], [1762.0, 67.5], [1390.0, 90.0]]], 
+["LFJ3", [[3419.0, -15.0], [2819.15, 0.0], [2218.0, 22.5], [1633.0, 45.0], [1206.0, 67.5], [864.0, 90.0]]], 
+["LFJ4", [[1016.0, -20.0], [1280.0, -10.0], [1577.0, 0.0], [1860.0, 10.0], [2093.0, 20.0]]], 
+["LFJ5", [[653.35, 0.0], [1641.0, 22.5], [2140.0, 45.0], [2632.0, 67.5]]], 
+["THJ3", [[2590.0, -12.0], [1834.0, 0.0], [1078.0, 12.0]]], 
+["THJ4", [[1432.0, 0.0], [1661.0, 22.5], [1953.0, 45.0], [2277.0, 67.5]]], 
+["THJ5", [[512.0, -60.0], [778.0, -45.0], [1004.0, -30.0], [1239.0, -15.0], [1480.0, 0.0], [1902.0, 15.0], [2329.0, 30.0], [2801.0, 45.0], [3088.0, 60.0]]], 
+["WRJ1", [[2374.0, -45.0], [2251.0, -22.5], [2101.0, 0.0], [1975.0, 15.0], [1870.0, 30.0]]], 
+["WRJ2", [[2871.0, -30.0], [1299.0, 0.0], [716.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2603.0, 2268.0], 0.0, 40.0], 
-                    [[2587.0, 2109.0], 0.0, 20.0], 
-                    [[2571.0, 1946.0], 0.0, 0.0], 
-                    [[2555.0, 1804.0], 0.0, -20.0], 
-                    [[2544.0, 1690.0], 0.0, -40.0], 
-                    [[2192.0, 2243.0], 22.5, 40.0], 
-                    [[2176.0, 2080.0], 22.5, 20.0], 
-                    [[2160.0, 1921.0], 22.5, 0.0], 
-                    [[2145.0, 1774.0], 22.5, -20.0], 
-                    [[2135.0, 1668.0], 22.5, -40.0], 
-                    [[1770.0, 2218.0], 45.0, 40.0], 
-                    [[1755.0, 2064.0], 45.0, 20.0], 
-                    [[1739.0, 1898.0], 45.0, 0.0], 
-                    [[1725.0, 1752.0], 45.0, -20.0], 
-                    [[1713.0, 1639.0], 45.0, -40.0], 
-                    [[1382.0, 2197.0], 67.5, 40.0], 
-                    [[1368.0, 2039.0], 67.5, 20.0], 
-                    [[1349.0, 1876.0], 67.5, 0.0], 
-                    [[1335.0, 1729.0], 67.5, -20.0], 
-                    [[1326.0, 1619.0], 67.5, -40.0], 
-                    [[1109.0, 2186.0], 90.0, 40.0], 
-                    [[1080.0, 2029.0], 90.0, 20.0], 
-                    [[1062.0, 1864.0], 90.0, 0.0], 
-                    [[1049.0, 1715.0], 90.0, -20.0], 
-                    [[1039.0, 1604.0], 90.0, -40.0]]]
+[["THJ1", "THJ2"], [[[3427.0, 2392.0], -15.0, 40.0], 
+                    [[3327.0, 2233.0], -15.0, 20.0], 
+                    [[3227.0, 2059.0], -15.0, 0.0], 
+                    [[3127.0, 1867.0], -15.0, -20.0], 
+                    [[3027.0, 1713.0], -15.0, -40.0],
+                    [[2627.0, 2362.0], 0.0, 40.0], 
+                    [[2616.0, 2203.0], 0.0, 20.0], 
+                    [[2593.0, 2029.0], 0.0, 0.0], 
+                    [[2584.0, 1837.0], 0.0, -20.0], 
+                    [[2568.0, 1683.0], 0.0, -40.0], 
+                    [[2172.0, 2345.0], 22.5, 40.0], 
+                    [[2160.0, 2184.0], 22.5, 20.0], 
+                    [[2144.0, 2000.0], 22.5, 0.0], 
+                    [[2120.0, 1810.0], 22.5, -20.0], 
+                    [[2104.0, 1651.0], 22.5, -40.0], 
+                    [[1709.0, 2323.0], 45.0, 40.0], 
+                    [[1697.0, 2165.0], 45.0, 20.0], 
+                    [[1680.0, 1977.0], 45.0, 0.0], 
+                    [[1660.0, 1787.0], 45.0, -20.0], 
+                    [[1643.0, 1631.0], 45.0, -40.0], 
+                    [[1298.0, 2295.0], 67.5, 40.0], 
+                    [[1295.0, 2139.0], 67.5, 20.0], 
+                    [[1278.0, 1951.0], 67.5, 0.0], 
+                    [[1260.0, 1770.0], 67.5, -20.0], 
+                    [[1248.0, 1617.0], 67.5, -40.0], 
+                    [[1023.0, 2280.0], 90.0, 40.0], 
+                    [[1009.0, 2119.0], 90.0, 20.0], 
+                    [[993.0, 1937.0], 90.0, 0.0], 
+                    [[973.0, 1758.0], 90.0, -20.0], 
+                    [[959.0, 1599.0], 90.0, -40.0]]]
 ]
