--- a/sr_hand_config/Template_GL/calibrations/calibration.yaml
+++ b/sr_hand_config/Template_GL/calibrations/calibration.yaml
@@ -1,66 +1,57 @@
-# Copyright 2023 Shadow Robot Company Ltd.
-#
-# This program is free software: you can redistribute it and/or modify it
-# under the terms of the GNU General Public License as published by the Free
-# Software Foundation version 2 of the License.
-#
-# This program is distributed in the hope that it will be useful, but WITHOUT
-# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
-# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
-# more details.
-#
-# You should have received a copy of the GNU General Public License along
-# with this program. If not, see <http://www.gnu.org/licenses/>.
-
 sr_calibrations: [
-["FFJ1", [[2848.0, 0.0], [2252.0, 22.5], [1568.0, 45.0], [964.0, 67.5], [456.0, 90.0]]], 
-["FFJ2", [[2893.0, 0.0], [2543.0, 22.5], [2084.0, 45.0], [1629.0, 67.5], [1223.0, 90.0]]], 
-["FFJ3", [[1764.0, 0.0], [2128.0, 22.5], [2450.0, 45.0], [2699.0, 67.5], [2869.0, 90.0]]], 
-["FFJ4", [[942.0, -20.0], [1212.0, -10.0], [1513.0, 0.0], [1820.0, 10.0], [2132.0, 20.0]]], 
-["MFJ1", [[2979.0, 0.0], [2292.0, 22.5], [1633.0, 45.0], [1003.0, 67.5], [463.0, 90.0]]], 
-["MFJ2", [[2983.0, 0.0], [2702.0, 22.5], [2305.0, 45.0], [1904.0, 67.5], [1503.0, 90.0]]], 
-["MFJ3", [[1778.0, 0.0], [2107.0, 22.5], [2411.0, 45.0], [2674.0, 67.5], [2857.0, 90.0]]], 
-["MFJ4", [[662.0, -20.0], [898.0, -10.0], [1187.0, 0.0], [1507.0, 10.0], [1835.0, 20.0]]], 
-["RFJ1", [[3257.0, 0.0], [2657.0, 22.5], [1897.0, 45.0], [1174.0, 67.5], [575.0, 90.0]]], 
-["RFJ2", [[2972.0, 0.0], [2674.0, 22.5], [2305.0, 45.0], [1891.0, 67.5], [1524.0, 90.0]]], 
-["RFJ3", [[1408.0, 0.0], [1775.0, 22.5], [2139.0, 45.0], [2484.0, 67.5], [2760.0, 90.0]]], 
-["RFJ4", [[1218.0, -20.0], [878.0, -10.0], [568.0, 0.0], [310.0, 10.0], [207.0, 20.0]]], 
-["LFJ1", [[3142.0, 0.0], [2431.0, 22.5], [1899.0, 45.0], [1309.0, 67.5], [808.0, 90.0]]], 
-["LFJ2", [[2907.0, 0.0], [2663.0, 22.5], [2313.0, 45.0], [1896.0, 67.5], [1481.0, 90.0]]], 
-["LFJ3", [[1756.0, 0.0], [2012.0, 22.5], [2303.0, 45.0], [2546.0, 67.5], [2698.0, 90.0]]], 
-["LFJ4", [[1537.0, -20.0], [1875.0, -10.0], [2200.0, 0.0], [2548.0, 10.0], [2864.0, 20.0]]], 
-["LFJ5", [[1667.0, 0.0], [2162.0, 22.5], [2807.0, 45.0], [3913.0, 67.5]]], 
-["THJ3", [[1450.0, -15.0], [2132.0, 0.0], [2543.0, 15.0]]], 
-["THJ4", [[1490.0, 0.0], [1707.0, 22.5], [1965.0, 45.0], [2247.0, 67.5]]], 
-["THJ5", [[625.0, -60.0], [742.0, -45.0], [954.0, -30.0], [1192.0, -15.0], [1416.0, 0.0], [1805.0, 15.0], [2170.0, 30.0], [2542.0, 45.0], [2942.0, 60.0]]], 
-["WRJ1", [[1033.0, -45.0], [865.0, -22.5], [724.0, 0.0], [669.0, 15.0], [617.0, 30.0]]], 
-["WRJ2", [[2833.0, -30.0], [1269.0, 0.0], [665.0, 10.0]]], 
+["FFJ1", [[3267.0, 0.0], [2483.0, 22.5], [1698.0, 45.0], [1005.0, 67.5], [409.0, 90.0]]], 
+["FFJ2", [[2893.0, 0.0], [2678.0, 22.5], [2322.0, 45.0], [1973.0, 67.5], [1608.0, 90.0]]], 
+["FFJ3", [[3084.0, -15.0], [2484.0, 0.0], [1961.0, 22.5], [1398.0, 45.0], [978.0, 67.5], [769.0, 90.0]]], 
+["FFJ4", [[2587.0, -20.0], [2260.0, -10.0], [1908.0, 0.0], [1590.0, 10.0], [1314.0, 20.0]]], 
+["MFJ1", [[3259.41, 0.0], [2652.0, 22.5], [1976.0, 45.0], [1328.0, 67.5], [698.0, 90.0]]], 
+["MFJ2", [[2927.78, 0.0], [2699.0, 22.5], [2346.0, 45.0], [1956.0, 67.5], [1575.0, 90.0]]], 
+["MFJ3", [[3174.0, -15.0], [2574.0, 0.0], [2026.0, 22.5], [1461.0, 45.0], [960.0, 67.5], [625.0, 90.0]]], 
+["MFJ4", [[2127.0, -20.0], [1819.0, -10.0], [1539.7, 0.0], [1222.0, 10.0], [971.0, 20.0]]], 
+["RFJ1", [[3309.0, 0.0], [2722.0, 22.5], [2069.0, 45.0], [1439.0, 67.5], [843.0, 90.0]]], 
+["RFJ2", [[3014.0, 0.0], [2787.0, 22.5], [2405.0, 45.0], [2002.0, 67.5], [1577.0, 90.0]]], 
+["RFJ3", [[3058.0, -15.0], [2458.0, 0.0], [2009.0, 22.5], [1533.0, 45.0], [1106.0, 67.5], [905.0, 90.0]]], 
+["RFJ4", [[956.0, -20.0], [1236.0, -10.0], [1531.0, 0.0], [1812.0, 10.0], [2099.0, 20.0]]], 
+["LFJ1", [[2968.0, 0.0], [2282.0, 22.5], [1509.0, 45.0], [838.0, 67.5], [367.0, 90.0]]], 
+["LFJ2", [[2972.0, 0.0], [2605.0, 22.5], [2200.0, 45.0], [1762.0, 67.5], [1390.0, 90.0]]], 
+["LFJ3", [[3419.0, -15.0], [2819.15, 0.0], [2218.0, 22.5], [1633.0, 45.0], [1206.0, 67.5], [864.0, 90.0]]], 
+["LFJ4", [[1016.0, -20.0], [1280.0, -10.0], [1577.0, 0.0], [1860.0, 10.0], [2093.0, 20.0]]], 
+["LFJ5", [[653.35, 0.0], [1641.0, 22.5], [2140.0, 45.0], [2632.0, 67.5]]], 
+["THJ3", [[2590.0, -12.0], [1834.0, 0.0], [1078.0, 12.0]]], 
+["THJ4", [[1432.0, 0.0], [1661.0, 22.5], [1953.0, 45.0], [2277.0, 67.5]]], 
+["THJ5", [[512.0, -60.0], [778.0, -45.0], [1004.0, -30.0], [1239.0, -15.0], [1480.0, 0.0], [1902.0, 15.0], [2329.0, 30.0], [2801.0, 45.0], [3088.0, 60.0]]], 
+["WRJ1", [[2374.0, -45.0], [2251.0, -22.5], [2101.0, 0.0], [1975.0, 15.0], [1870.0, 30.0]]], 
+["WRJ2", [[2871.0, -30.0], [1299.0, 0.0], [716.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2445.0, 2392.0], 0.0, 40.0], 
-                    [[2457.0, 2221.0], 0.0, 20.0], 
-                    [[2431.0, 2020.0], 0.0, 0.0], 
-                    [[2400.0, 1830.0], 0.0, -20.0], 
-                    [[2407.0, 1681.0], 0.0, -40.0], 
-                    [[2011.0, 2359.0], 22.5, 40.0], 
-                    [[2059.0, 2207.0], 22.5, 20.0], 
-                    [[2027.0, 1997.0], 22.5, 0.0], 
-                    [[2008.0, 1811.0], 22.5, -20.0], 
-                    [[1955.0, 1659.0], 22.5, -40.0], 
-                    [[1600.0, 2342.0], 45.0, 40.0], 
-                    [[1615.0, 2175.0], 45.0, 20.0], 
-                    [[1590.0, 1976.0], 45.0, 0.0], 
-                    [[1579.0, 1789.0], 45.0, -20.0], 
-                    [[1547.0, 1635.0], 45.0, -40.0], 
-                    [[1259.0, 2319.0], 67.5, 40.0], 
-                    [[1249.0, 2150.0], 67.5, 20.0], 
-                    [[1212.0, 1956.0], 67.5, 0.0], 
-                    [[1183.0, 1767.0], 67.5, -20.0], 
-                    [[1177.0, 1615.0], 67.5, -40.0], 
-                    [[1002.0, 2306.0], 90.0, 40.0], 
-                    [[986.0, 2138.0], 90.0, 20.0], 
-                    [[972.0, 1939.0], 90.0, 0.0], 
-                    [[953.0, 1751.0], 90.0, -20.0], 
-                    [[944.0, 1601.0], 90.0, -40.0]]]
+[["THJ1", "THJ2"], [[[3427.0, 2392.0], -15.0, 40.0], 
+                    [[3327.0, 2233.0], -15.0, 20.0], 
+                    [[3227.0, 2059.0], -15.0, 0.0], 
+                    [[3127.0, 1867.0], -15.0, -20.0], 
+                    [[3027.0, 1713.0], -15.0, -40.0],
+                    [[2627.0, 2362.0], 0.0, 40.0], 
+                    [[2616.0, 2203.0], 0.0, 20.0], 
+                    [[2593.0, 2029.0], 0.0, 0.0], 
+                    [[2584.0, 1837.0], 0.0, -20.0], 
+                    [[2568.0, 1683.0], 0.0, -40.0], 
+                    [[2172.0, 2345.0], 22.5, 40.0], 
+                    [[2160.0, 2184.0], 22.5, 20.0], 
+                    [[2144.0, 2000.0], 22.5, 0.0], 
+                    [[2120.0, 1810.0], 22.5, -20.0], 
+                    [[2104.0, 1651.0], 22.5, -40.0], 
+                    [[1709.0, 2323.0], 45.0, 40.0], 
+                    [[1697.0, 2165.0], 45.0, 20.0], 
+                    [[1680.0, 1977.0], 45.0, 0.0], 
+                    [[1660.0, 1787.0], 45.0, -20.0], 
+                    [[1643.0, 1631.0], 45.0, -40.0], 
+                    [[1298.0, 2295.0], 67.5, 40.0], 
+                    [[1295.0, 2139.0], 67.5, 20.0], 
+                    [[1278.0, 1951.0], 67.5, 0.0], 
+                    [[1260.0, 1770.0], 67.5, -20.0], 
+                    [[1248.0, 1617.0], 67.5, -40.0], 
+                    [[1023.0, 2280.0], 90.0, 40.0], 
+                    [[1009.0, 2119.0], 90.0, 20.0], 
+                    [[993.0, 1937.0], 90.0, 0.0], 
+                    [[973.0, 1758.0], 90.0, -20.0], 
+                    [[959.0, 1599.0], 90.0, -40.0]]]
 ]
