--- a/sr_hand_config/Template_GR/calibrations/calibration.yaml
+++ b/sr_hand_config/Template_GR/calibrations/calibration.yaml
@@ -1,66 +1,57 @@
-# Copyright 2023 Shadow Robot Company Ltd.
-#
-# This program is free software: you can redistribute it and/or modify it
-# under the terms of the GNU General Public License as published by the Free
-# Software Foundation version 2 of the License.
-#
-# This program is distributed in the hope that it will be useful, but WITHOUT
-# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
-# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
-# more details.
-#
-# You should have received a copy of the GNU General Public License along
-# with this program. If not, see <http://www.gnu.org/licenses/>.
-
 sr_calibrations: [
-["FFJ1", [[3241.31, 0.0], [2540.62, 22.5], [1707.01, 45.0], [980.01, 67.5], [364.06, 90.0]]], 
-["FFJ2", [[2843.91, 0.0], [2544.83, 22.5], [2147.76, 45.0], [1736.69, 67.5], [1347.29, 90.0]]], 
-["FFJ3", [[2638.3, 0.0], [2116.95, 22.5], [1526.02, 45.0], [985.06, 67.5], [663.96, 90.0]]], 
-["FFJ4", [[2614.57, -20.0], [2301.73, -10.0], [1984.16, 0.0], [1667.25, 10.0], [1367.34, 20.0]]], 
-["MFJ1", [[2994.69, 0.0], [2247.11, 22.5], [1491.07, 45.0], [838.99, 67.5], [336.85, 90.0]]], 
-["MFJ2", [[3049.37, 0.0], [2771.49, 22.5], [2378.27, 45.0], [1933.3, 67.5], [1522.81, 90.0]]], 
-["MFJ3", [[2577.96, 0.0], [1990.74, 22.5], [1486.14, 45.0], [993.66, 67.5], [680.28, 90.0]]], 
-["MFJ4", [[2275.22, -20.0], [1931.73, -10.0], [1586.45, 0.0], [1254.03, 10.0], [936.16, 20.0]]], 
-["RFJ1", [[3107.56, 0.0], [2352.06, 22.5], [1552.05, 45.0], [854.0, 67.5], [297.02, 90.0]]], 
-["RFJ2", [[2854.88, 0.0], [2528.53, 22.5], [2106.1, 45.0], [1675.29, 67.5], [1331.03, 90.0]]], 
-["RFJ3", [[2516.0, 0.0], [1999.94, 22.5], [1456.01, 45.0], [1051.85, 67.5], [768.81, 90.0]]], 
-["RFJ4", [[779.84, -20.0], [1073.15, -10.0], [1396.1, 0.0], [1733.03, 10.0], [2074.54, 20.0]]], 
-["LFJ1", [[4095.0, 0.0], [2431.0, 22.5], [1899.0, 45.0], [1309.0, 67.5], [808.0, 90.0]]], 
-["LFJ2", [[4095.0, 0.0], [2663.0, 22.5], [2313.0, 45.0], [1896.0, 67.5], [1481.0, 90.0]]], 
-["LFJ3", [[4095.0, 0.0], [2012.0, 22.5], [2303.0, 45.0], [2546.0, 67.5], [2698.0, 90.0]]], 
-["LFJ4", [[10.0, -20.0], [1875.0, -10.0], [2200.0, 0.0], [2548.0, 10.0], [2864.0, 20.0]]], 
-["LFJ5", [[10.0, 0.0], [2162.0, 22.5], [2807.0, 45.0], [3913.0, 67.5]]], 
-["THJ3", [[1433.0, -15.0], [1433.0, 0.0], [1433.0, 15.0]]], 
-["THJ4", [[2505.0, 0.0], [2177.0, 22.5], [1864.0, 45.0], [1584.0, 67.5]]], 
-["THJ5", [[678.0, -60.0], [801.0, -45.0], [1003.0, -30.0], [1298.0, -15.0], [1633.0, 0.0], [2015.0, 15.0], [2483.0, 30.0], [2807.0, 45.0], [3142.0, 60.0]]], 
-["WRJ1", [[2267.0, -45.0], [2405.0, -22.5], [1683.0, 0.0], [1689.0, 15.0], [1721.0, 30.0]]], 
-["WRJ2", [[10.0, -30.0], [1269.0, 0.0], [665.0, 10.0]]], 
+["FFJ1", [[3267.0, 0.0], [2483.0, 22.5], [1698.0, 45.0], [1005.0, 67.5], [409.0, 90.0]]], 
+["FFJ2", [[2893.0, 0.0], [2678.0, 22.5], [2322.0, 45.0], [1973.0, 67.5], [1608.0, 90.0]]], 
+["FFJ3", [[3084.0, -15.0], [2484.0, 0.0], [1961.0, 22.5], [1398.0, 45.0], [978.0, 67.5], [769.0, 90.0]]], 
+["FFJ4", [[2587.0, -20.0], [2260.0, -10.0], [1908.0, 0.0], [1590.0, 10.0], [1314.0, 20.0]]], 
+["MFJ1", [[3259.41, 0.0], [2652.0, 22.5], [1976.0, 45.0], [1328.0, 67.5], [698.0, 90.0]]], 
+["MFJ2", [[2927.78, 0.0], [2699.0, 22.5], [2346.0, 45.0], [1956.0, 67.5], [1575.0, 90.0]]], 
+["MFJ3", [[3174.0, -15.0], [2574.0, 0.0], [2026.0, 22.5], [1461.0, 45.0], [960.0, 67.5], [625.0, 90.0]]], 
+["MFJ4", [[2127.0, -20.0], [1819.0, -10.0], [1539.7, 0.0], [1222.0, 10.0], [971.0, 20.0]]], 
+["RFJ1", [[3309.0, 0.0], [2722.0, 22.5], [2069.0, 45.0], [1439.0, 67.5], [843.0, 90.0]]], 
+["RFJ2", [[3014.0, 0.0], [2787.0, 22.5], [2405.0, 45.0], [2002.0, 67.5], [1577.0, 90.0]]], 
+["RFJ3", [[3058.0, -15.0], [2458.0, 0.0], [2009.0, 22.5], [1533.0, 45.0], [1106.0, 67.5], [905.0, 90.0]]], 
+["RFJ4", [[956.0, -20.0], [1236.0, -10.0], [1531.0, 0.0], [1812.0, 10.0], [2099.0, 20.0]]], 
+["LFJ1", [[2968.0, 0.0], [2282.0, 22.5], [1509.0, 45.0], [838.0, 67.5], [367.0, 90.0]]], 
+["LFJ2", [[2972.0, 0.0], [2605.0, 22.5], [2200.0, 45.0], [1762.0, 67.5], [1390.0, 90.0]]], 
+["LFJ3", [[3419.0, -15.0], [2819.15, 0.0], [2218.0, 22.5], [1633.0, 45.0], [1206.0, 67.5], [864.0, 90.0]]], 
+["LFJ4", [[1016.0, -20.0], [1280.0, -10.0], [1577.0, 0.0], [1860.0, 10.0], [2093.0, 20.0]]], 
+["LFJ5", [[653.35, 0.0], [1641.0, 22.5], [2140.0, 45.0], [2632.0, 67.5]]], 
+["THJ3", [[2590.0, -12.0], [1834.0, 0.0], [1078.0, 12.0]]], 
+["THJ4", [[1432.0, 0.0], [1661.0, 22.5], [1953.0, 45.0], [2277.0, 67.5]]], 
+["THJ5", [[512.0, -60.0], [778.0, -45.0], [1004.0, -30.0], [1239.0, -15.0], [1480.0, 0.0], [1902.0, 15.0], [2329.0, 30.0], [2801.0, 45.0], [3088.0, 60.0]]], 
+["WRJ1", [[2374.0, -45.0], [2251.0, -22.5], [2101.0, 0.0], [1975.0, 15.0], [1870.0, 30.0]]], 
+["WRJ2", [[2871.0, -30.0], [1299.0, 0.0], [716.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2875.0, 2427.0], 0.0, 40.0], 
-                    [[2860.0, 2251.0], 0.0, 20.0], 
-                    [[2836.0, 2082.0], 0.0, 0.0], 
-                    [[2825.0, 1887.0], 0.0, -20.0], 
-                    [[2811.0, 1736.0], 0.0, -40.0], 
-                    [[2460.0, 2405.0], 22.5, 40.0], 
-                    [[2444.0, 2239.0], 22.5, 20.0], 
-                    [[2428.0, 2045.0], 22.5, 0.0], 
-                    [[2409.0, 1866.0], 22.5, -20.0], 
-                    [[2390.0, 1718.0], 22.5, -40.0], 
-                    [[1998.0, 2379.0], 45.0, 40.0], 
-                    [[1986.0, 2209.0], 45.0, 20.0], 
-                    [[1969.0, 2021.0], 45.0, 0.0], 
-                    [[1952.0, 1841.0], 45.0, -20.0], 
-                    [[1940.0, 1692.0], 45.0, -40.0], 
-                    [[1597.0, 2363.0], 67.5, 40.0], 
-                    [[1583.0, 2191.0], 67.5, 20.0], 
-                    [[1563.0, 2003.0], 67.5, 0.0], 
-                    [[1544.0, 1826.0], 67.5, -20.0], 
-                    [[1531.0, 1665.0], 67.5, -40.0], 
-                    [[1260.0, 2342.0], 90.0, 40.0], 
-                    [[1247.0, 2178.0], 90.0, 20.0], 
-                    [[1226.0, 1987.0], 90.0, 0.0], 
-                    [[1209.0, 1812.0], 90.0, -20.0], 
-                    [[1196.0, 1653.0], 90.0, -40.0]]]
+[["THJ1", "THJ2"], [[[3427.0, 2392.0], -15.0, 40.0], 
+                    [[3327.0, 2233.0], -15.0, 20.0], 
+                    [[3227.0, 2059.0], -15.0, 0.0], 
+                    [[3127.0, 1867.0], -15.0, -20.0], 
+                    [[3027.0, 1713.0], -15.0, -40.0],
+                    [[2627.0, 2362.0], 0.0, 40.0], 
+                    [[2616.0, 2203.0], 0.0, 20.0], 
+                    [[2593.0, 2029.0], 0.0, 0.0], 
+                    [[2584.0, 1837.0], 0.0, -20.0], 
+                    [[2568.0, 1683.0], 0.0, -40.0], 
+                    [[2172.0, 2345.0], 22.5, 40.0], 
+                    [[2160.0, 2184.0], 22.5, 20.0], 
+                    [[2144.0, 2000.0], 22.5, 0.0], 
+                    [[2120.0, 1810.0], 22.5, -20.0], 
+                    [[2104.0, 1651.0], 22.5, -40.0], 
+                    [[1709.0, 2323.0], 45.0, 40.0], 
+                    [[1697.0, 2165.0], 45.0, 20.0], 
+                    [[1680.0, 1977.0], 45.0, 0.0], 
+                    [[1660.0, 1787.0], 45.0, -20.0], 
+                    [[1643.0, 1631.0], 45.0, -40.0], 
+                    [[1298.0, 2295.0], 67.5, 40.0], 
+                    [[1295.0, 2139.0], 67.5, 20.0], 
+                    [[1278.0, 1951.0], 67.5, 0.0], 
+                    [[1260.0, 1770.0], 67.5, -20.0], 
+                    [[1248.0, 1617.0], 67.5, -40.0], 
+                    [[1023.0, 2280.0], 90.0, 40.0], 
+                    [[1009.0, 2119.0], 90.0, 20.0], 
+                    [[993.0, 1937.0], 90.0, 0.0], 
+                    [[973.0, 1758.0], 90.0, -20.0], 
+                    [[959.0, 1599.0], 90.0, -40.0]]]
 ]
