--- a/sr_hand_config/Template_GR/calibrations/calibration.yaml
+++ b/sr_hand_config/Template_GR/calibrations/calibration.yaml
@@ -1,3 +1,17 @@
+# Copyright 2023 Shadow Robot Company Ltd.
+#
+# This program is free software: you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by the Free
+# Software Foundation version 2 of the License.
+#
+# This program is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
+# more details.
+#
+# You should have received a copy of the GNU General Public License along
+# with this program. If not, see <http://www.gnu.org/licenses/>.
+
 sr_calibrations: [
 ["FFJ1", [[3267.0, 0.0], [2483.0, 22.5], [1698.0, 45.0], [1005.0, 67.5], [409.0, 90.0]]], 
 ["FFJ2", [[2893.0, 0.0], [2678.0, 22.5], [2322.0, 45.0], [1973.0, 67.5], [1608.0, 90.0]]], 
