Copyright info correction in calibration.yaml

--- a/sr_hand_config/5130/calibrations/calibration.yaml
+++ b/sr_hand_config/5130/calibrations/calibration.yaml
@@ -1,3 +1,17 @@
+# Copyright 2023 Shadow Robot Company Ltd.
+#
+# This program is free software: you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by the Free
+# Software Foundation version 2 of the License.
+#
+# This program is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
+# more details.
+#
+# You should have received a copy of the GNU General Public License along
+# with this program. If not, see <http://www.gnu.org/licenses/>.
+
 sr_calibrations: [
 ["FFJ1", [[3478.0, 0.0], [2727.0, 22.5], [1902.0, 45.0], [1263.0, 67.5], [659.0, 90.0]]],
 ["FFJ2", [[2991.0, 0.0], [2783.0, 22.5], [2453.0, 45.0], [2053.0, 67.5], [1652.0, 90.0]]],
