--- a/sr_hand_config/5178/calibrations/calibration.yaml
+++ b/sr_hand_config/5178/calibrations/calibration.yaml
@@ -1,3 +1,17 @@
+# Copyright 2023 Shadow Robot Company Ltd.
+#
+# This program is free software: you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by the Free
+# Software Foundation version 2 of the License.
+#
+# This program is distributed in the hope that it will be useful, but WITHOUT
+# ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
+# FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
+# more details.
+#
+# You should have received a copy of the GNU General Public License along
+# with this program. If not, see <http://www.gnu.org/licenses/>.
+
 sr_calibrations: [
 ["FFJ1", [[3013.02, 0.0], [2300.74, 22.5], [1635.23, 45.0], [987.32, 67.5], [431.85, 90.0]]], 
 ["FFJ2", [[2964.91, 0.0], [2719.91, 22.5], [2387.99, 45.0], [2035.32, 67.5], [1655.28, 90.0]]], 
