Hand 121 calibration update.

--- a/sr_hand_config/4634/calibrations/calibration.yaml
+++ b/sr_hand_config/4634/calibrations/calibration.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022 Shadow Robot Company Ltd.
+# Copyright 2024 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -15,52 +15,57 @@
 sr_calibrations: [
 ["FFJ1", [[3242.0, 0.0], [2528.0, 22.5], [1732.0, 45.0], [1027.0, 67.5], [355.0, 90.0]]], 
 ["FFJ2", [[2786.0, 0.0], [2507.0, 22.5], [2128.0, 45.0], [1742.0, 67.5], [1438.0, 90.0]]], 
-["FFJ3", [[1449.0, 0.0], [1874.0, 22.5], [2273.0, 45.0], [2631.0, 67.5], [2955.0, 90.0]]], 
-["FFJ4", [[2125.0, -20.0], [1758.0, -10.0], [1378.0, 0.0], [1028.0, 10.0], [942.0, 20.0]]], 
+["FFJ3", [[1154.0, -15.0], [1475.0, 0.0], [1879.0, 22.5], [2291.0, 45.0], [2636.0, 67.5], [2949.0, 90.0]]], 
+["FFJ4", [[2106.0, -20.0], [1765.0, -10.0], [1398.0, 0.0], [1054.0, 10.0], [860.0, 20.0]]], 
 ["MFJ1", [[3564.0, 0.0], [3136.0, 22.5], [2529.0, 45.0], [1909.0, 67.5], [1253.0, 90.0]]], 
 ["MFJ2", [[2761.0, 0.0], [2421.0, 22.5], [2076.0, 45.0], [1727.0, 67.5], [1418.0, 90.0]]], 
-["MFJ3", [[1391.0, 0.0], [1661.0, 22.5], [1980.0, 45.0], [2328.0, 67.5], [2617.0, 90.0]]], 
-["MFJ4", [[2169.0, -20.0], [1822.0, -10.0], [1482.0, 0.0], [1204.0, 10.0], [889.0, 20.0]]], 
+["MFJ3", [[1179.0, -15.0], [1394.0, 0.0], [1656.0, 22.5], [1986.0, 45.0], [2326.0, 67.5], [2596.0, 90.0]]], 
+["MFJ4", [[2145.0, -20.0], [1812.0, -10.0], [1475.0, 0.0], [1135.0, 10.0], [825.0, 20.0]]], 
 ["RFJ1", [[3012.0, 0.0], [2290.0, 22.5], [1586.0, 45.0], [911.0, 67.5], [363.0, 90.0]]], 
 ["RFJ2", [[2764.0, 0.0], [2433.0, 22.5], [2068.0, 45.0], [1697.0, 67.5], [1349.0, 90.0]]], 
-["RFJ3", [[1721.0, 0.0], [2005.0, 22.5], [2292.0, 45.0], [2589.0, 67.5], [2802.0, 90.0]]], 
-["RFJ4", [[948.0, -20.0], [1201.0, -10.0], [1552.0, 0.0], [1897.0, 10.0], [2173.0, 20.0]]], 
+["RFJ3", [[1456.0, -15.0], [1719.0, 0.0], [2006.0, 22.5], [2312.0, 45.0], [2613.0, 67.5], [2816.0, 90.0]]], 
+["RFJ4", [[865.0, -20.0], [1155.0, -10.0], [1504.0, 0.0], [1830.0, 10.0], [2161.0, 20.0]]], 
 ["LFJ1", [[3286.0, 0.0], [2629.0, 22.5], [1858.0, 45.0], [1111.0, 67.5], [539.0, 90.0]]], 
 ["LFJ2", [[2933.0, 0.0], [2668.0, 22.5], [2295.0, 45.0], [1893.0, 67.5], [1503.0, 90.0]]], 
-["LFJ3", [[1746.0, 0.0], [2083.0, 22.5], [2381.0, 45.0], [2659.0, 67.5], [2867.0, 90.0]]], 
-["LFJ4", [[278.0, -20.0], [535.0, -10.0], [816.0, 0.0], [1151.0, 10.0], [1391.0, 20.0]]], 
-["LFJ5", [[3398.0, 0.0], [2490.0, 22.5], [2079.0, 45.0], [1723.0, 67.5]]], 
-["THJ3", [[2557.0, -12.0], [1359.0, 0.0], [987.0, 12.0]]], 
-["THJ4", [[2614.0, 0.0], [2360.0, 22.5], [2065.0, 45.0], [1771.0, 67.5]]], 
-["THJ5", [[941.0, -60.0], [1189.0, -45.0], [1492.0, -30.0], [1893.0, -15.0], [2356.0, 0.0], [2685.0, 15.0], [2923.0, 30.0], [3186.0, 45.0], [3393.0, 60.0]]], 
-["WRJ1", [[2666.0, -45.0], [2531.0, -22.5], [2335.0, 0.0], [2212.0, 15.0], [2076.0, 30.0]]], 
-["WRJ2", [[2255.0, -30.0], [1244.0, 0.0], [800.0, 10.0]]], 
+["LFJ3", [[1467.0, -15.0], [1739.0, 0.0], [2065.0, 22.5], [2380.0, 45.0], [2671.0, 67.5], [2863.0, 90.0]]], 
+["LFJ4", [[330.0, -20.0], [570.0, -10.0], [850.0, 0.0], [1166.0, 10.0], [1440.0, 20.0]]], 
+["LFJ5", [[3398.0, 0.0], [2452.0, 22.5], [2069.0, 45.0], [1664.0, 67.5]]], 
+["THJ3", [[2456.0, -12.0], [1624.0, 0.0], [961.0, 12.0]]], 
+["THJ4", [[2623.0, 0.0], [2325.0, 22.5], [2020.0, 45.0], [1731.0, 67.5]]], 
+["THJ5", [[929.0, -60.0], [1181.0, -45.0], [1445.0, -30.0], [1837.0, -15.0], [2352.0, 0.0], [2708.0, 15.0], [2935.0, 30.0], [3213.0, 45.0], [3455.0, 60.0]]], 
+["WRJ1", [[2662.0, -45.0], [2534.0, -22.5], [2328.0, 0.0], [2210.0, 15.0], [2076.0, 30.0]]], 
+["WRJ2", [[2620.0, -30.0], [1250.0, 0.0], [755.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2833.0, 2466.0], 0.0, 40.0], 
-                    [[2817.0, 2309.0], 0.0, 20.0], 
-                    [[2803.0, 2132.0], 0.0, 0.0], 
-                    [[2784.0, 1954.0], 0.0, -20.0], 
-                    [[2766.0, 1806.0], 0.0, -40.0], 
-                    [[2365.0, 2440.0], 22.5, 40.0], 
-                    [[2349.0, 2286.0], 22.5, 20.0], 
-                    [[2334.0, 2097.0], 22.5, 0.0], 
-                    [[2316.0, 1940.0], 22.5, -20.0], 
-                    [[2299.0, 1785.0], 22.5, -40.0], 
-                    [[1842.0, 2413.0], 45.0, 40.0], 
-                    [[1823.0, 2260.0], 45.0, 20.0], 
-                    [[1804.0, 2076.0], 45.0, 0.0], 
-                    [[1789.0, 1907.0], 45.0, -20.0], 
-                    [[1781.0, 1762.0], 45.0, -40.0], 
-                    [[1358.0, 2387.0], 67.5, 40.0], 
-                    [[1338.0, 2234.0], 67.5, 20.0], 
-                    [[1319.0, 2068.0], 67.5, 0.0], 
-                    [[1316.0, 1888.0], 67.5, -20.0], 
-                    [[1311.0, 1743.0], 67.5, -40.0], 
-                    [[1042.0, 2370.0], 90.0, 40.0], 
-                    [[1010.0, 2225.0], 90.0, 20.0], 
-                    [[991.0, 2037.0], 90.0, 0.0], 
-                    [[979.0, 1860.0], 90.0, -20.0], 
-                    [[969.0, 1713.0], 90.0, -40.0]]]
+[["THJ1", "THJ2"], [[[3136.0, 2426.0], -15.0, 40.0], 
+                    [[3126.0, 2288.0], -15.0, 20.0], 
+                    [[3112.0, 2120.0], -15.0, 0.0], 
+                    [[3090.0, 1953.0], -15.0, -20.0], 
+                    [[3070.0, 1808.0], -15.0, -40.0],
+                    [[2914.0, 2425.0], 0.0, 40.0], 
+                    [[2919.0, 2281.0], 0.0, 20.0], 
+                    [[2905.0, 2106.0], 0.0, 0.0], 
+                    [[2865.0, 1927.0], 0.0, -20.0], 
+                    [[2835.0, 1789.0], 0.0, -40.0], 
+                    [[2468.0, 2407.0], 22.5, 40.0], 
+                    [[2473.0, 2259.0], 22.5, 20.0], 
+                    [[2456.0, 2085.0], 22.5, 0.0], 
+                    [[2413.0, 1923.0], 22.5, -20.0], 
+                    [[2357.0, 1765.0], 22.5, -40.0], 
+                    [[1918.0, 2377.0], 45.0, 40.0], 
+                    [[1929.0, 2231.0], 45.0, 20.0], 
+                    [[1916.0, 2061.0], 45.0, 0.0], 
+                    [[1872.0, 1890.0], 45.0, -20.0], 
+                    [[1817.0, 1746.0], 45.0, -40.0], 
+                    [[1418.0, 2338.0], 67.5, 40.0], 
+                    [[1430.0, 2210.0], 67.5, 20.0], 
+                    [[1414.0, 2032.0], 67.5, 0.0], 
+                    [[1385.0, 1865.0], 67.5, -20.0], 
+                    [[1343.0, 1715.0], 67.5, -40.0], 
+                    [[1055.0, 2324.0], 90.0, 40.0], 
+                    [[1063.0, 2195.0], 90.0, 20.0], 
+                    [[1050.0, 2022.0], 90.0, 0.0], 
+                    [[1005.0, 1835.0], 90.0, -20.0], 
+                    [[985.0, 1695.0], 90.0, -40.0]]]
 ]
