Change common diagnostics aggregator to find all connect Ethercat devices (connected to different Ethercat ports) under Ethercat Master tab

--- a/sr_hand_config/common/config/common_diagnostic_analyzers.yaml
+++ b/sr_hand_config/common/config/common_diagnostic_analyzers.yaml
@@ -21,7 +21,7 @@ analyzers:
         type: diagnostic_aggregator/GenericAnalyzer
         path: EtherCAT Master
         timeout: 5.0
-        regex: 'EtherCAT Master'
+        regex: ['EtherCAT Master', 'EtherCAT Port.*']
         num_items: 1
   control_loop:
     type: diagnostic_aggregator/GenericAnalyzer
