Aggregate all connected Ethercat devices diagnostics under 'Ethercat Master' (#261)
* Change common diagnostics aggregator to find all connect Ethercat devices (connected to different Ethercat ports) under Ethercat Master tab

* Update license year

* Update number of expected Ethercat devices based on number of hand launched

* Update license year

* Update common_diagnostic_analyzers.yaml

* Update common_diagnostic_analyzers.yaml

* Fix last new line

* Fix last new line

--- a/sr_hand_config/common/config/common_diagnostic_analyzers.yaml
+++ b/sr_hand_config/common/config/common_diagnostic_analyzers.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022 Shadow Robot Company Ltd.
+# Copyright 2022, 2024 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -21,7 +21,7 @@ analyzers:
         type: diagnostic_aggregator/GenericAnalyzer
         path: EtherCAT Master
         timeout: 5.0
-        regex: 'EtherCAT Master'
+        regex: ['EtherCAT Master', 'EtherCAT Port.*']
         num_items: 1
   control_loop:
     type: diagnostic_aggregator/GenericAnalyzer
