--- a/sr_hand_config/6234/general_info.yaml
+++ b/sr_hand_config/6234/general_info.yaml
@@ -17,7 +17,7 @@ type: 'hand_e'
 version: 'E3M5'
 fingers: [th, ff, mf, rf, lf]
 sensors:
-  tip: {th: pst, ff: pst, mf: pst, rf: pst, lf: pst}
+  tip: {th: mst, ff: mst, mf: mst, rf: mst, lf: mst}
   mid: {}
   prox: {}
   palm: {}
