--- a/sr_hand_config/6234/rates/sensor_data_polling.yaml
+++ b/sr_hand_config/6234/rates/sensor_data_polling.yaml
@@ -1,4 +1,4 @@
-# Copyright 2023 Shadow Robot Company Ltd.
+# Copyright 2023, 2024 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -50,5 +50,5 @@ ubi0_sensor_data_update_rate: {
 
 mst_sensor_data_update_rate: {
   TACTILE_SENSOR_TYPE_MST_MAGNETIC_INDUCTION: -1.,
-  TACTILE_SENSOR_TYPE_MST_TEMPERATURE: -1.
+  TACTILE_SENSOR_TYPE_MST_TEMPERATURE: 1.
   }
