--- a/sr_hand_config/6426/calibrations/calibration.yaml
+++ b/sr_hand_config/6426/calibrations/calibration.yaml
@@ -29,10 +29,10 @@ sr_calibrations: [
 ["LFJ2", [[2944.0, 0.0], [2650.0, 22.5], [2312.0, 45.0], [1905.0, 67.5], [1539.0, 90.0]]], 
 ["LFJ3", [[2767.0, -15.0], [2439.0, 0.0], [1968.0, 22.5], [1490.0, 45.0], [1066.0, 67.5], [750.0, 90.0]]], 
 ["LFJ4", [[902.0, -20.0], [1152.0, -10.0], [1453.0, 0.0], [1770.0, 10.0], [2023.0, 20.0]]], 
-["LFJ5", [[463.35, 0.0], [1425.0, 22.5], [2105.0, 45.0],
+["LFJ5", [[463.35, 0.0], [1425.0, 22.5], [2105.0, 45.0]]],
 ["THJ3", [[2534.0, -12.0], [1922.0, 0.0], [1145.0, 12.0]]], 
-["THJ4", [[2576.0, 0.0], [2361.0, 22.5], [2110.0, 45.0], [1833.0, 67.5]]], 
-["THJ5", [[980.0, -60.0], [1320.0, -45.0], [1691.0, -30.0], [2167.0, -15.0], [2584.0, 0.0], [2936.0, 15.0], [2983.0, 30.0], [3264.0, 45.0], [3515.0, 60.0]]], 
+["THJ4", [[2597.0, 0.0], [2350.0, 22.5], [2100.0, 45.0], [1820.0, 67.5]]], 
+["THJ5", [[559.0, -60.0], [729.0, -45.0], [1018.0, -30.0], [1325.0, -15.0], [1652.0, 0.0], [2110.0, 15.0], [2504.0, 30.0], [2752.0, 45.0], [3044.0, 60.0]]], 
 ["WRJ1", [[2109.0, -45.0], [1983.0, -22.5], [1834.0, 0.0], [1723.0, 15.0], [1616.0, 30.0]]], 
 ["WRJ2", [[2989.0, -30.0], [1114.0, 0.0], [387.0, 10.0]]], 
 ]
