--- a/sr_hand_config/1178/general_info.yaml
+++ b/sr_hand_config/1178/general_info.yaml
@@ -17,7 +17,7 @@ type: 'hand_e'
 version: 'E3M5'
 fingers: [th, ff, mf, rf, lf]
 sensors:
-  tip: {th: bt_sp, ff: bt_sp, mf: bt_sp, rf: pst, lf: bt_sp}
+  tip: {th: bt_sp, ff: bt_sp, mf: bt_sp, rf: bt_sp, lf: bt_sp}
   mid: {}
   prox: {}
   palm: {}
