--- a/sr_hand_config/Template_GL/general_info.yaml
+++ b/sr_hand_config/Template_GL/general_info.yaml
@@ -17,7 +17,7 @@ type: 'hand_g'
 version: 'G1M5'
 fingers: [th, ff, mf, rf]
 sensors:
-  tip: {th: pst, ff: pst, mf: pst, rf: pst}
+  tip: {th: mst, ff: mst, mf: mst, rf: mst}
   mid: {}
   prox: {}
   palm: {}
