Update hand e and hand e lite template config files to include STF sensors and new palm flesh (on hand e only) by default

--- a/sr_hand_config/Template_ER/general_info.yaml
+++ b/sr_hand_config/Template_ER/general_info.yaml
@@ -14,10 +14,10 @@
 
 side: 'right'
 type: 'hand_e'
-version: 'E3M5'
+version: 'E4'
 fingers: [th, ff, mf, rf, lf]
 sensors:
-  tip: {th: pst, ff: pst, mf: pst, rf: pst, lf: pst}
+  tip: {th: mst, ff: mst, mf: mst, rf: mst, lf: mst}
   mid: {}
   prox: {}
   palm: {}
