Make new plam flesh default on hand lite

--- a/sr_hand_config/Template_GR/general_info.yaml
+++ b/sr_hand_config/Template_GR/general_info.yaml
@@ -14,7 +14,7 @@
 
 side: 'right'
 type: 'hand_g'
-version: 'G1M5'
+version: 'G4'
 fingers: [th, ff, mf, rf]
 sensors:
   tip: {th: mst, ff: mst, mf: mst, rf: mst}
