New calibration after Hand132 repair@

--- a/sr_hand_config/4906/calibrations/calibration.yaml
+++ b/sr_hand_config/4906/calibrations/calibration.yaml
@@ -1,4 +1,4 @@
-# Copyright 2024 Shadow Robot Company Ltd.
+# Copyright 2025 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -12,10 +12,14 @@
 # You should have received a copy of the GNU General Public License along
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
+# This file contains an alternate approach to pedal connection, that falls victim to Ubuntu suspending USB devices.
+# Try as I might, I couldn't make Ubuntu leave it alone, so switched to the input events approach seen in
+# sr_triple_pedal.py. I'll leave this here in case it might be useful later.
+
 sr_calibrations: [
-["FFJ1", [[3772.0, 0.0], [3166.0, 22.5], [2366.0, 45.0], [1548.0, 67.5], [823.0, 90.0]]], 
-["FFJ2", [[2791.0, 0.0], [2438.0, 22.5], [2039.0, 45.0], [1660.0, 67.5], [1296.0, 90.0]]], 
-["FFJ3", [[2979.0, -15.0],[2570.0, 0.0], [2065.0, 22.5], [1538.0, 45.0], [1087.0, 67.5], [734.0, 90.0]]], 
+["FFJ1", [[3772.0, 0.0], [3166.0, 22.5], [2366.0, 45.0], [1713.0, 67.5], [823.0, 90.0]]], 
+["FFJ2", [[2791.0, 0.0], [2438.0, 22.5], [2039.0, 45.0], [1665.0, 67.5], [1296.0, 90.0]]], 
+["FFJ3", [[2979.0, -15.0], [2570.0, 0.0], [2065.0, 22.5], [1538.0, 45.0], [1087.0, 67.5], [734.0, 90.0]]], 
 ["FFJ4", [[2350.0, -20.0], [2096.0, -10.0], [1813.0, 0.0], [1558.0, 10.0], [1369.0, 20.0]]], 
 ["MFJ1", [[2808.0, 0.0], [2102.0, 22.5], [1389.0, 45.0], [737.0, 67.5], [259.0, 90.0]]], 
 ["MFJ2", [[2964.0, 0.0], [2582.0, 22.5], [2156.0, 45.0], [1712.0, 67.5], [1395.0, 90.0]]], 
@@ -31,8 +35,8 @@ sr_calibrations: [
 ["LFJ4", [[1537.0, -20.0], [1875.0, -10.0], [2200.0, 0.0], [2548.0, 10.0], [2864.0, 20.0]]], 
 ["LFJ5", [[1667.0, 0.0], [2162.0, 22.5], [2807.0, 45.0], [3913.0, 67.5]]], 
 ["THJ3", [[1450.0, -15.0], [1927.0, 0.0], [2543.0, 15.0]]], 
-["THJ4", [[1473.0, 0.0], [1830.0, 22.5], [2087.0, 45.0], [2405.0, 67.5]]], 
-["THJ5", [[615.0, -60.0], [845.0, -45.0], [1075.0, -30.0], [1368.0, -15.0], [1740.0, 0.0], [2180.0, 15.0], [2576.0, 30.0], [2858.0, 45.0], [3089.0, 60.0]]], 
+["THJ4", [[1497.0, 0.0], [1830.0, 22.5], [2087.0, 45.0], [2405.0, 67.5]]], 
+["THJ5", [[615.0, -60.0], [795.0, -45.0], [975.0, -30.0], [1219.0, -15.0], [1591.0, 0.0], [2031.0, 15.0], [2475.0, 30.0], [2807.0, 45.0], [3089.0, 60.0]]], 
 ["WRJ1", [[1033.0, -45.0], [865.0, -22.5], [724.0, 0.0], [669.0, 15.0], [617.0, 30.0]]], 
 ["WRJ2", [[2833.0, -30.0], [1269.0, 0.0], [665.0, 10.0]]], 
 ]
@@ -42,7 +46,7 @@ sr_calibrations_coupled: [
                     [[2717.0, 2144.0], -15.0, 20.0], 
                     [[2699.0, 1977.0], -15.0, 0.0], 
                     [[2679.0, 1807.0], -15.0, -20.0], 
-                    [[2662.0, 1685.0], -15.0, -40.0],
+                    [[2662.0, 1685.0], -15.0, -40.0], 
                     [[2435.0, 2311.0], 0.0, 40.0], 
                     [[2426.0, 2149.0], 0.0, 20.0], 
                     [[2404.0, 1971.0], 0.0, 0.0], 
